--- a/home.css
+++ b/home.css
@@ -47,9 +47,30 @@ body {
 #right-column {
   float: right;
   width: 60%;
-  padding: 60px;
+  padding: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
   background-color: #ffffff90;
   position: relative;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  height: 600px;
+  overflow-y: auto;
+}
+
+p {
+}
+
+h1 {
+  margin-block-start: 0em;
+  margin-block-end: 0.8em;
+}
+
+h4 {
+  display: block;
+  margin-block-start: 15px;
+  margin-block-end: 4px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
