--- a/home.css
+++ b/home.css
@@ -63,7 +63,7 @@ p {
 
 h1 {
   margin-block-start: 0em;
-  margin-block-end: 0.8em;
+  margin-block-end: 0.1em;
 }
 
 h4 {
@@ -73,4 +73,9 @@ h4 {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
+}
+
+h5 {
+  font-weight: normal;
+  margin-block-start: 1.7em;
 }
