--- a/home.css
+++ b/home.css
@@ -7,9 +7,6 @@ body * {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body {
-}
-
 .background {
   height: 100vh;
   background-image: url('img/HolidayInn.jpeg');
@@ -52,13 +49,9 @@ body {
   padding-right: 60px;
   background-color: #ffffff90;
   position: relative;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 10px;
   height: 600px;
   overflow-y: auto;
-}
-
-p {
 }
 
 h1 {
